--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^5.2.9",
     "angular2-materialize": "^15.1.10",
     "core-js": "^2.4.1",
+    "firebase": "^6.6.2",
     "hammerjs": "^2.0.8",
     "jquery": "3.3.1",
     "materialize-css": "0.100.2",
