--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "3.3.1",
     "materialize-css": "0.100.2",
+    "node-sass": "^4.12.0",
     "rxjs": "^5.5.8",
     "zone.js": "0.8.26"
   },
